[package]
name = "passata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.3", default_features = false }
flexi_logger = { version = "0.28.5", default_features = false, features = ["colors"] }
hotwatch = "0.5.0"
humantime-serde = "1.1.1"
log = "0.4.22"
nix = { version = "0.29.0", features = ["process"] }
notify-rust = "4.11.0"
toml = "0.8.16"
serde = { version = "1.0.204", features = ["derive"] }
xdg = "2.5.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
lexopt = "0.3.0"
smithay-client-toolkit = "0.19.2"
humantime = "2.1.0"
pipewire = "0.8.0"
libspa-sys = "0.8.0"
